fixed the blog card animation issues

--- a/src/content/daily/consistency-is-key.mdx
+++ b/src/content/daily/consistency-is-key.mdx
@@ -4,6 +4,7 @@ date: "2025-05-11"
 tags: ["habits", "focus", "motivation"]
 summary: "No single session beats showing up every day. Here's why daily practice matters."
 cover: "/cover-default.jpg"
+featured : true
 draft: false
 ---
 
