--- a/src/content/technical/gsap-animations.mdx
+++ b/src/content/technical/gsap-animations.mdx
@@ -4,6 +4,7 @@ date: "2025-07-18"
 tags: ["gsap", "react", "animation"]
 summary: "Real-world GSAP combos: route transitions, staggered scroll, tilt cards."
 cover: "/cover-default.jpg"
+featured: true
 draft: false
 ---
 
