--- a/src/content/technical/next-tailwind-v4.mdx
+++ b/src/content/technical/next-tailwind-v4.mdx
@@ -4,6 +4,7 @@ date: "2025-06-07"
 tags: ["nextjs", "tailwind", "css"]
 summary: "Cutting-edge styles with zero-config Tailwind v4.1 and Next.js 15 App Router."
 cover: "/cover-default.jpg"
+featured: true
 draft: false
 ---
 
